==> yorange1/OneOS-Lite/drivers/hal/nrf/hal_drivers/drv_gpio.c <==
#include "drv_gpio.h"
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

static void nrf5_pin_mode(os_device_t *dev, os_base_t pin, os_base_t mode)
{
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return;
    }

    if (mode == PIN_MODE_OUTPUT)
    {
        /* output setting */
        nrf_gpio_cfg_output(pin);
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        /* input setting: pull up. */
        nrf_gpio_cfg_input(pin, NRF_GPIO_PIN_PULLUP);
    }
    else if (mode == PIN_MODE_INPUT_PULLDOWN)
    {
        /* input setting: pull down. */
        nrf_gpio_cfg_input(pin, NRF_GPIO_PIN_PULLDOWN);
    }
    else if (mode == PIN_MODE_INPUT)
    {
        /* input setting: not pull. */
        nrf_gpio_cfg_input(pin, NRF_GPIO_PIN_NOPULL);
    }
    else if (mode == PIN_MODE_OUTPUT_OD)
    {
        /* output setting: od. */
        nrf_gpio_cfg(
        pin,
        NRF_GPIO_PIN_DIR_OUTPUT,
        NRF_GPIO_PIN_INPUT_DISCONNECT,
        NRF_GPIO_PIN_NOPULL,
        NRF_GPIO_PIN_S0D1,
        NRF_GPIO_PIN_NOSENSE);
    }

}

static void nrf5_pin_write(os_device_t *dev, os_base_t pin, os_base_t value)
{
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return;
    }
    
    nrf_gpio_pin_write(pin, value);
}

static int nrf5_pin_read(os_device_t *dev, os_base_t pin)
{
    int value;
    const struct pin_index *index;

    value = PIN_LOW;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return value;
    }

    value = nrf_gpio_pin_read(pin);

    return value;
}

static void pin_irq_hdr(nrfx_gpiote_pin_t pin, nrf_gpiote_polarity_t action)
{
    int i;
    int irq_quantity;

    #ifdef OS_USING_LPMGR
    set_gpio_int_event_flag();
    #endif

    irq_quantity = ITEM_NUM(pin_irq_hdr_tab);
    for(i = 0; i < irq_quantity; i++)
    {
        if(pin_irq_hdr_tab[i].pin == pin)
        {
            pin_irq_hdr_tab[i].hdr(pin_irq_hdr_tab[i].args);
        }
    }
}

static os_err_t nrf5_pin_attach_irq(struct os_device   *device,
                                    os_int32_t          pin,
                                    os_uint32_t         mode,
                                    void (*hdr)(void *args), void *args)
{
      const struct pin_index *index;
      os_int32_t irqindex = -1;
      os_base_t level;
      nrfx_err_t err_code;
      int i;
      int irq_quantity;
      
      index = get_pin(pin);
      if (index == OS_NULL)
      {
          return OS_ENOSYS;
      }
      
      irq_quantity = ITEM_NUM(pin_irq_hdr_tab);
      for(i = 0; i < irq_quantity; i++)
      {
          if(pin_irq_hdr_tab[i].pin != -1)
          {
              irqindex = -1;
              continue;
          }
          else
          {
              irqindex = i;
              break;
          }
      }
      if(irqindex == -1)
      {
          return OS_ENOMEM;
      }
      
      level = os_irq_lock();  
      pin_irq_hdr_tab[irqindex].pin  = pin;
      pin_irq_hdr_tab[irqindex].hdr  = hdr;
      pin_irq_hdr_tab[irqindex].mode = mode;
      pin_irq_hdr_tab[irqindex].args = args;
      
    if(mode == PIN_IRQ_MODE_RISING)
      {
          nrfx_gpiote_in_config_t inConfig = NRFX_GPIOTE_CONFIG_IN_SENSE_LOTOHI(args);
          inConfig.pull = NRF_GPIO_PIN_PULLDOWN;  
          err_code = nrfx_gpiote_in_init(pin, &inConfig, pin_irq_hdr);
      }
          
      else if(mode == PIN_IRQ_MODE_FALLING)
      {
          nrfx_gpiote_in_config_t inConfig = NRFX_GPIOTE_CONFIG_IN_SENSE_HITOLO(args);
          inConfig.pull = NRF_GPIO_PIN_PULLUP;  
          err_code = nrfx_gpiote_in_init(pin, &inConfig, pin_irq_hdr);
      }
      
      else if(mode == PIN_IRQ_MODE_RISING_FALLING)
      {
          nrfx_gpiote_in_config_t inConfig = NRFX_GPIOTE_CONFIG_IN_SENSE_TOGGLE(args);
          inConfig.pull = NRF_GPIO_PIN_PULLUP;
          err_code = nrfx_gpiote_in_init(pin, &inConfig, pin_irq_hdr);
      }
      
      os_irq_unlock(level);
      
      switch(err_code) 
      {
          case NRFX_ERROR_BUSY:
              return OS_EBUSY;
          case NRFX_SUCCESS:
              return OS_EOK;
          case NRFX_ERROR_NO_MEM:
              return OS_ENOMEM;
          default:
              return OS_ERROR;
      }

}

static os_err_t nrf5_pin_dettach_irq(struct os_device *device, os_int32_t pin)
{
    const struct pin_index *index;
    os_base_t level;
    int i;
    int irq_quantity;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return OS_ENOSYS;
    }
        
    irq_quantity = ITEM_NUM(pin_irq_hdr_tab);
    for(i = 0; i < irq_quantity; i++)
    {
        if(pin_irq_hdr_tab[i].pin == pin)
        {
            level = os_irq_lock();
            pin_irq_hdr_tab[i].pin  = -1;
            pin_irq_hdr_tab[i].hdr  = OS_NULL;
            pin_irq_hdr_tab[i].mode = 0;
            pin_irq_hdr_tab[i].args = OS_NULL;
            nrfx_gpiote_in_uninit(pin);
            os_irq_unlock(level);
            break;
        }
    }
    if(i >= irq_quantity)
    {
        return OS_ENOSYS;
    }
    return OS_EOK;

}

static os_err_t nrf5_pin_irq_enable(struct os_device *device, os_base_t pin, os_uint32_t enabled)
{
    const struct pin_index *index;  
    os_base_t level;
    int i;
    int irq_quantity;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return OS_ENOSYS;
    }

    irq_quantity = ITEM_NUM(pin_irq_hdr_tab);
    for(i = 0; i < irq_quantity; i++)
    {
        if(pin_irq_hdr_tab[i].pin == pin)
        {
            level = os_irq_lock();
            if(enabled == PIN_IRQ_ENABLE)
            {
                nrfx_gpiote_in_event_enable(pin,enabled);
            }
            else if(enabled == PIN_IRQ_DISABLE)
            {
                nrfx_gpiote_in_event_disable(pin);
            }
            os_irq_unlock(level);
            break;
        }
    }
    
    if(i >= irq_quantity)
    {
        return OS_ENOSYS;
    }
    return OS_EOK;

}

int os_hw_pin_init(void)
{
   nrfx_err_t err_code;
   err_code = os_device_pin_register(0, &_nrf5_pin_ops, OS_NULL);
   err_code = nrfx_gpiote_init();
    
    switch(err_code) 
    {
        case NRFX_ERROR_INVALID_STATE:
            return OS_EINVAL;
        case NRFX_SUCCESS:
            return OS_EOK;
        default:
            return OS_ERROR;;
    }
}
